; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_mfd-core.c_mfd_platform_add_cell.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_mfd-core.c_mfd_platform_add_cell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }
%struct.mfd_cell = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*, %struct.mfd_cell*, i32*)* @mfd_platform_add_cell to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mfd_platform_add_cell(%struct.platform_device* %0, %struct.mfd_cell* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.platform_device*, align 8
  %6 = alloca %struct.mfd_cell*, align 8
  %7 = alloca i32*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %5, align 8
  store %struct.mfd_cell* %1, %struct.mfd_cell** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load %struct.mfd_cell*, %struct.mfd_cell** %6, align 8
  %9 = icmp ne %struct.mfd_cell* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %30

11:                                               ; preds = %3
  %12 = load %struct.mfd_cell*, %struct.mfd_cell** %6, align 8
  %13 = load i32, i32* @GFP_KERNEL, align 4
  %14 = call %struct.TYPE_2__* @kmemdup(%struct.mfd_cell* %12, i32 4, i32 %13)
  %15 = load %struct.platform_device*, %struct.platform_device** %5, align 8
  %16 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %15, i32 0, i32 0
  store %struct.TYPE_2__* %14, %struct.TYPE_2__** %16, align 8
  %17 = load %struct.platform_device*, %struct.platform_device** %5, align 8
  %18 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = icmp ne %struct.TYPE_2__* %19, null
  br i1 %20, label %24, label %21

21:                                               ; preds = %11
  %22 = load i32, i32* @ENOMEM, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %4, align 4
  br label %30

24:                                               ; preds = %11
  %25 = load i32*, i32** %7, align 8
  %26 = load %struct.platform_device*, %struct.platform_device** %5, align 8
  %27 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %26, i32 0, i32 0
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  store i32* %25, i32** %29, align 8
  store i32 0, i32* %4, align 4
  br label %30

30:                                               ; preds = %24, %21, %10
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local %struct.TYPE_2__* @kmemdup(%struct.mfd_cell*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
